changes in checkbox

--- a/event.html
+++ b/event.html
@@ -56,13 +56,13 @@
             <br>
             <label for="7">
             <input type="radio" id="7" name="semester"          value="5th-8th sem"> 5th–8th sem</label><br><br>
-            <label for="8">In which department do you belong to?            </label><br>
+            <label for="8">In which club or committee you are joined?            </label><br>
             <label for="8">
-            <input type="checkbox" id="8" name="branch[]"           value="CS,IT,ECE">CS, IT, ECE</label><br>
+            <input type="checkbox" id="8" name="club or committee"           value="SAHYOG">SAHYOG</label><br>
             <label for="9">
-            <input type="checkbox" id="9" name="branch[]"           value="EE,MECH,CIVIL">EE, MECH, CIVIL</label><br>
+            <input type="checkbox" id="9" name="club or committee"           value="SHAURYA">SHAURYA</label><br>
             <label for="10">
-            <input type="checkbox" id="10" name="branch[]"          value="META,BIO-TECH,BIO-MED">META, BIO-TECH,     BIO-MED</label><br><br>
+            <input type="checkbox" id="10" name="club or committee"          value="E-cell , I-cell">E-cell , I-cell</label><br><br>
             <label for="feedback">Give feedback</label><br>
             <textarea name="feedback" id="feedback" placeholder="comments">
             </textarea><br><br>
