--- a/about.html
+++ b/about.html
@@ -4,29 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header>
-        <h2>About me</h2>
-        <h3>PortFolio</h3>
-    </header>
-    <main>
-        <section>
-            <p> This is Ketan Dewangan learning front end from youtube chhanel named APNA COLLEGE.
-                Currenlty, I am learnig DSA from strivers in c++.
-            </p>
-            <h4>strength and interest</h4>
 
-    <dl>
-        <dt>learning html</dt>
-        <dd>intersted in creating webpages.</dd>
-    </dl>
-        <a href="index.html">homepage</a>
-    <br>
-        </section>
-    </main>
-    <br>
-    <footer>Thank You</footer>
-    
+<body>
+
+<header>
+    <h2>About me</h2>
+    <h3>PortFolio</h3>
+</header>
+
+<main>
+    <section>
+        <p>
+            This is Ketan Dewangan learning front end from youtube
+            chhanel named APNA COLLEGE.
+            Currenlty, I am learnig DSA from strivers in c++.
+        </p>
+
+        <h4>strength and interest</h4>
+
+        <dl>
+            <dt>learning html</dt>
+            <dd>intersted in creating webpages.</dd>
+        </dl>
+<br>
+        <a href="index.html" class="btn">homepage</a>
+        <br><br>
+
+    </section>
+</main>
+
+<footer>
+    Thank You
+</footer>
+
 </body>
 </html>
