--- a/index.html
+++ b/index.html
@@ -4,44 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header>
+
+<header>
+    <nav class="nav">
         <h1>Ketan Dewangan</h1>
-    </header>
-    <main>
-        <section>
-            <p>Hello, My name is Ketan Dewangan from ECE branch.This is my day1 in github 30 days challenge.</p>
-            <nav>
-            <a href="about.html">About me</a>
+        <div class="nav-links">
+            <a href="about.html" class="btn">About Me</a>
+
+        </div>
     </nav>
-    <br>
-    <img src="https://th.bing.com/th/id/OIP.crfLwccoND9P-BKSrY6bqgHaEK?w=272&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="profile image" height="100">
+</header>
 
-    <p>unordered skill</p>
-    <ul>
-        <li>c++</li>
-        <li>html</li>
-    </ul>
-    <p>ordered skill</p>
-    <ol>
-        <li>c++</li>
-        <li>html</li>
-    </ol>
-    <article><h4>project:my portfolio</h4></article>
-    <iframe width='200'   src="https://www.youtube.com/embed/HcOc7P5BMi4?si=mPTTmf4t5qa911jD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <blockquote>
-        <p>hardwork is key to success</p>
-        <cite>Naval Ravikant</cite>
-    </blockquote>
+<main>
+    <section>
+        <p>
+            Hello, My name is Ketan Dewangan from ECE branch.
+            This is my day1 in github 30 days challenge.
+        </p>
 
-        </section>
-    </main>
-    <footer>
-        <p>thank you</p>
-    </footer>
-    
+        <img 
+            src="https://th.bing.com/th/id/OIP.crfLwccoND9P-BKSrY6bqgHaEK?w=272&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3"
+            alt="profile image"
+            height="100">
 
-</body>
+        <p>unordered skill</p>
+        <ul>
+            <li>c++</li>
+            <li>html</li>
+        </ul>
+
+        <p>ordered skill</p>
+        <ol>
+            <li>c++</li>
+            <li>html</li>
+        </ol>
+
+        <article>
+            <h4>project:my portfolio</h4>
+        </article>
+
+        <iframe 
+            width="200"
+            src="https://www.youtube.com/embed/HcOc7P5BMi4?si=mPTTmf4t5qa911jD"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen>
+        </iframe>
+
+        <blockquote>
+            <p>hardwork is key to success</p>
+            <cite>Naval Ravikant</cite>
+        </blockquote>
+    </section>
+</main>
+
+<footer>
+    <p style="font-size: 20px;">thank you </p>
+</footer>
+
 </body>
 </html>
