--- a/landing.html
+++ b/landing.html
@@ -9,7 +9,6 @@
 <body>
     <header class="header">
     <h1>PRODUCT LANDING PAGE</h1>
-        <br>
         <nav class="nav-links">
             <a href="#home" >Home </a>
             <a href="#features" >Features</a>
@@ -18,13 +17,12 @@
         
         
         </header>
-        <h1><img src='https://th.bing.com/th/id/OIP.UnSQJWTSiQvvm5vff5_higHaEK?w=293&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3' alt="LOGO"></h1>  <br>
+        <h1><img src='https://th.bing.com/th/id/OIP.UnSQJWTSiQvvm5vff5_higHaEK?w=293&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3' alt="LOGO"></h1>  
         <section class="hero">
         <h1>Where Precision Meets Style</h1>
         <p>Time is money says the proverb, but turn it around and you get a precious truth</p>
         <button>Get Started</button>
-        </section>
-        <br>
+        </section>  
         <section class="features">
         <article class="card">
         <h3>Fast Charging</h3>
